# par-calculation

./: .gitignore  CMakeLists.txt  Makefile  README.md  RELEASE.md  boost_def.h  main.cpp  main.h  ncio.cpp  ncio.h  par.cpp  par.h  string_util.cpp  string_util.h  variables.h  variables_def.h
arch/: Makefile.inc.gcc
doc/: Makefile  biblio.rst  compilation.rst  conf.py  index.rst  intro.rst  running.rst
doc/_static/: biblio.bib
doc/_templates/: layout.html
test/: CMakeLists.txt  test_filelist.cpp  test_ncvar_existence.cpp  test_par.cpp  test_parameters.cpp  test_variables.cpp
test/resources/: mesh_mask.nc  nico_HOTv420_1ts_20100101_20100131_grid_T.nc  nico_HOTv420_1ts_20100101_20100228_ptrc_T.nc  nico_HOTv420_1ts_20100201_20100228_grid_T.nc  nico_HOTv420_1ts_20100301_20100331_grid_T.nc  nico_HOTv420_1ts_20100301_20100430_ptrc_T.nc  nico_HOTv420_1ts_20100401_20100430_grid_T.nc  nico_HOTv420_1ts_20100501_20100531_grid_T.nc  nico_HOTv420_1ts_20100501_20100630_ptrc_T.nc  nico_HOTv420_1ts_20100601_20100630_grid_T.nc  nico_HOTv420_1ts_20100701_20100731_grid_T.nc  nico_HOTv420_1ts_20100701_20100831_ptrc_T.nc  nico_HOTv420_1ts_20100801_20100831_grid_T.nc  nico_HOTv420_1ts_20100901_20100930_grid_T.nc  nico_HOTv420_1ts_20100901_20101031_ptrc_T.nc  nico_HOTv420_1ts_20101001_20101031_grid_T.nc  nico_HOTv420_1ts_20101101_20101130_grid_T.nc  nico_HOTv420_1ts_20101101_20101231_ptrc_T.nc  nico_HOTv420_1ts_20101201_20101231_grid_T.nc  parameters.csv  parameters_1d.csv
